force-app/main/default/objects/Group_Class__c.object
<CustomObject>
    <description>Selected Classes for Employer Group</description>
    <fields>
        <fullName>Class_Description__c</fullName>
        <label>Class Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <label>Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Classes</relationshipLabel>
        <relationshipName>Group_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Quote_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Group Class</label>
    <nameField>
        <label>Class Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>